[package]
name = "tack"
version = "0.1.0"
authors = ["Sean McKibben <graphex@graphex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_tuple = "0.5"
serde_derive = "1.0"
smallvec = "1.6.1"
tokio = "1.4.0"
tokio-util = { version = "0.6.5", features = [ "codec", "net" ] }
futures = "0.3.13"
bytes = "1.0.1"